# hap-rs

./: Cargo.toml  ENCODER_IMPLEMENTATION_PLAN.md  README.md
hap-parser/: Cargo.toml  README.md
hap-parser/examples/: frame_info.rs
hap-parser/src/: lib.rs
hap-parser/tests/: integration_test.rs
hap-qt/: Cargo.toml  README.md
hap-qt/examples/: encode_video.rs  hap_info.rs
hap-qt/src/: frame_encoder.rs  lib.rs  writer.rs
hap-wgpu/: Cargo.toml
hap-wgpu/examples/: encode_hap.rs  player.rs
hap-wgpu/src/: encoder.rs  gpu_compress.rs  lib.rs
hap-wgpu/src/shaders/: bc1_compress.wgsl  bc3_compress.wgsl  bc4_compress.wgsl  ycocg_bc3_compress.wgsl
