[package]
name = "hap-parser"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "HAP video frame parser for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/hap-parser"
keywords = ["hap", "video", "codec", "dxt", "gpu"]
categories = ["multimedia::video", "parser-implementations"]

[dependencies]
byteorder = "1.5"
snap = "1.1"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
